fix(css): Improve headings spacing
Improve headings spacing

--- a/css/monks-enhanced-journal.css
+++ b/css/monks-enhanced-journal.css
@@ -14,7 +14,7 @@ body {
 }
 
 .monks-enhanced-journal .enhanced-journal-header .bookmark-bar .bookmark-button > div {
-    font-family: var(--font-label), "serif";
+    font-family: var(--font-label), sans-serif;
 }
 
 .monks-enhanced-journal {
@@ -26,7 +26,7 @@ body {
 
 .monks-enhanced-journal .sheet.journal-entry .journal-entry-page header.journal-page-header h1 {
     font-size: var(--font-h1-size);
-    font-family: var(--font-h1), "serif";
+    font-family: var(--font-h1), sans-serif;
     font-weight: unset;
 }
 
