--- a/css/theme.css
+++ b/css/theme.css
@@ -19,16 +19,6 @@
 }
 
 @font-face {
-    font-family: NewBaskervilleItalic;
-    src: url(../fonts/NewBaskervilleItalic.ttf)
-}
-
-@font-face {
-    font-family: NewBaskervilleBoldItalic;
-    src: url(../fonts/NewBaskervilleBoldItalic.ttf)
-}
-
-@font-face {
     font-family: MinionPro;
     src: url(../fonts/MinionProRegular.ttf)
 }
@@ -100,12 +90,12 @@ body {
 /*  Typography                              */
 /* ---------------------------------------- */
 body {
-    --font-body: NewBaskerville, "Palatino Linotype", sans-serif;
-    --font-label: NewBaskervilleBold, "Palatino Linotype", sans-serif;
-    --font-notes: NewBaskerville, "Palatino Linotype", sans-serif;
-    --font-monospace: MinionPro, "Palatino Linotype", sans-serif;
-    --font-blockquote: NewBaskerville, "Palatino Linotype", sans-serif;
-    --font-code: NiveauGroteskMedium, "Palatino Linotype", sans-serif;
+    --font-body: NewBaskerville, "Sigmika", sans-serif;
+    --font-label: NewBaskervilleBold, "Sigmika", sans-serif;
+    --font-notes: NewBaskerville, "Sigmika", sans-serif;
+    --font-monospace: MinionPro, "Sigmika", sans-serif;
+    --font-blockquote: NewBaskerville, "Sigmika", sans-serif;
+    --font-code: NiveauGroteskMedium, "Sigmika", sans-serif;
     --font-awesome: "Font Awesome 6 Pro";
     --font-awesome-duotone: "Font Awesome 6 Duotone";
     --font-size-5: 0.4rem;
@@ -127,22 +117,22 @@ body {
     --font-size-48: 3rem;
     --font-size-64: 4rem;
     --font-size-80: 5rem;
-    --font-h1: Aniron, serif;
-    --font-h2: Aniron, serif;
-    --font-h3: Aniron, serif;
-    --font-h4: Aniron, serif;
-    --font-h5: Aniron, sans-serif;
-    --font-h6: Aniron, serif;
-    --font-h1-bold: AnironBold, serif;
-    --font-h2-bold: AnironBold, serif;
-    --font-h3-bold: AnironBold, serif;
-    --font-h4-bold: AnironBold, serif;
-    --font-h5-bold: AnironBold, serif;
-    --font-h6-bold: AnironBold, serif;
-    --font-h1-size: var(--font-size-18);
-    --font-h2-size: var(--font-size-16);
-    --font-h3-size: var(--font-size-15);
-    --font-h4-size: var(--font-size-13);
+    --font-h1: Aniron, Sigmika;
+    --font-h2: Aniron, Sigmika;
+    --font-h3: Aniron, Sigmika;
+    --font-h4: Aniron, Sigmika;
+    --font-h5: Aniron, Sigmika;
+    --font-h6: Aniron, Sigmika;
+    --font-h1-bold: AnironBold, Sigmika;
+    --font-h2-bold: AnironBold, Sigmika;
+    --font-h3-bold: AnironBold, Sigmika;
+    --font-h4-bold: AnironBold, Sigmika;
+    --font-h5-bold: AnironBold, Sigmika;
+    --font-h6-bold: AnironBold, Sigmika;
+    --font-h1-size: var(--font-size-15);
+    --font-h2-size: var(--font-size-14);
+    --font-h3-size: var(--font-size-13);
+    --font-h4-size: var(--font-size-12);
     --font-h5-size: var(--font-size-10);
     --font-h6-size: var(--font-size-8);
     --font-body-size: var(--font-size-13);
@@ -221,5 +211,5 @@ body {
     --color-scrollbar-track: transparent;
     --color-scrollbar-border: #e07060;
 
-    --font-primary: NewBaskerville, sans-serif;
+    --font-primary: NewBaskerville, Sigmika;
 }
